// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`WideMissionCard should render 1`] = `
<View
  accessibilityLabel="wide-mission-card-container"
  accessible={true}
  focusable={true}
  onClick={[Function]}
  onResponderGrant={[Function]}
  onResponderMove={[Function]}
  onResponderRelease={[Function]}
  onResponderTerminate={[Function]}
  onResponderTerminationRequest={[Function]}
  onStartShouldSetResponder={[Function]}
  testID="wide-mission-card-container"
>
  <View
    style={
      Array [
        Object {
          "backgroundColor": "transparent",
          "elevation": 3,
          "shadowColor": "#262C2F",
          "shadowOffset": Object {
            "height": 4,
            "width": 0,
          },
          "shadowOpacity": 0.1,
        },
        Object {
          "borderBottomLeftRadius": 8,
          "borderBottomRightRadius": 8,
          "borderTopLeftRadius": 8,
          "borderTopRightRadius": 8,
          "flexDirection": "column",
          "justifyContent": "space-between",
          "paddingBottom": 20,
          "paddingLeft": 20,
          "paddingRight": 20,
          "paddingTop": 20,
        },
        Object {
          "alignItems": "center",
          "backgroundColor": "#FFFFFF",
          "borderBottomLeftRadius": 8,
          "borderBottomRightRadius": 8,
          "borderTopLeftRadius": 8,
          "borderTopRightRadius": 8,
          "flexDirection": "row",
          "justifyContent": "flex-start",
          "marginHorizontal": 16,
          "marginVertical": 8,
          "paddingBottom": 20,
          "paddingLeft": 20,
          "paddingRight": 20,
          "paddingTop": 20,
        },
      ]
    }
  >
    <View
      style={
        Array [
          Object {
            "height": 60,
            "width": 60,
          },
          Object {
            "backgroundColor": "#E2E3E3",
            "borderBottomLeftRadius": 30,
            "borderBottomRightRadius": 30,
            "borderTopLeftRadius": 30,
            "borderTopRightRadius": 30,
            "height": 60,
            "width": 60,
          },
        ]
      }
    >
      <View
        style={
          Array [
            Object {
              "overflow": "hidden",
            },
            Object {
              "alignItems": "center",
              "borderBottomLeftRadius": 60,
              "borderBottomRightRadius": 60,
              "borderTopLeftRadius": 60,
              "borderTopRightRadius": 60,
              "height": "100%",
              "justifyContent": "center",
              "width": "100%",
            },
          ]
        }
      >
        <FastImageView
          accessibilityLabel="brand-logo-image"
          accessible={true}
          onFastImageError={[Function]}
          onFastImageLoad={[Function]}
          onFastImageLoadEnd={[Function]}
          onFastImageLoadStart={[Function]}
          resizeMode="cover"
          source={
            Object {
              "priority": "high",
              "uri": "https://www.movistar.es/estaticos/img/ico-app-mi-movistar-2017.png",
            }
          }
          style={
            Object {
              "bottom": 0,
              "left": 0,
              "position": "absolute",
              "right": 0,
              "top": 0,
            }
          }
          testID="brand-logo-image"
        />
      </View>
    </View>
    <View
      style={
        Object {
          "alignItems": "flex-start",
          "flexBasis": 0,
          "flexGrow": 1,
          "flexShrink": 1,
          "justifyContent": "space-between",
          "paddingLeft": 20,
        }
      }
    >
      <Text
        accessibilityLabel="wide-mission-card-mission-name"
        accessible={true}
        ellipsizeMode="tail"
        font="SFProDisplay-Bold"
        numberOfLines={1}
        style={
          Array [
            Object {
              "color": "#909BA0",
              "fontFamily": "SFProDisplay-Bold",
              "fontSize": 16,
              "lineHeight": 22,
            },
            Object {
              "color": "#262C2F",
              "fontSize": 18,
              "paddingVertical": 4,
              "width": "100%",
            },
          ]
        }
        testID="wide-mission-card-mission-name"
      >
        Starbucks
      </Text>
      <View
        accessibilityLabel="pill-container"
        accessible={true}
        style={
          Array [
            Array [
              Object {
                "alignItems": "center",
                "backgroundColor": "#DDE8F5",
                "borderBottomLeftRadius": 20,
                "borderBottomRightRadius": 20,
                "borderTopLeftRadius": 20,
                "borderTopRightRadius": 20,
                "flexDirection": "row",
                "paddingLeft": 4,
                "paddingRight": 10,
              },
              Object {
                "height": 28,
              },
            ],
            Array [
              undefined,
            ],
            undefined,
          ]
        }
        testID="pill-container"
      >
        <View
          accessibilityLabel="pill-icon"
          accessible={true}
          style={
            Array [
              Object {
                "alignItems": "center",
                "backgroundColor": "#FFFFFF",
                "borderBottomLeftRadius": 50,
                "borderBottomRightRadius": 50,
                "borderTopLeftRadius": 50,
                "borderTopRightRadius": 50,
                "justifyContent": "center",
              },
              undefined,
            ]
          }
          testID="pill-icon"
        >
          <Text
            accessibilityLabel="icon-text"
            accessible={true}
            allowFontScaling={false}
            selectable={false}
            style={
              Array [
                Object {
                  "color": "#0066CC",
                  "fontSize": 20,
                },
                undefined,
                Object {
                  "fontFamily": "sywmax",
                  "fontStyle": "normal",
                  "fontWeight": "normal",
                },
                Object {},
              ]
            }
            testID="icon-text"
          >
            
          </Text>
        </View>
        <Text
          accessibilityLabel="pill-text"
          accessible={true}
          style={
            Array [
              Object {
                "color": "#909BA0",
                "fontFamily": "SFProDisplay-Medium",
                "fontSize": 16,
                "lineHeight": 22,
              },
              Array [
                Object {
                  "paddingLeft": 4,
                },
                Array [
                  Object {
                    "color": "#0066CC",
                    "fontFamily": "SFProDisplay-Bold",
                    "fontSize": 14,
                  },
                  Object {
                    "lineHeight": 20,
                  },
                  undefined,
                ],
              ],
            ]
          }
          testID="pill-text"
        >
          200
        </Text>
      </View>
    </View>
  </View>
</View>
`;

exports[`WideMissionCard should render with points and dollars mission 1`] = `
<View
  accessibilityLabel="wide-mission-card-container"
  accessible={true}
  focusable={true}
  onClick={[Function]}
  onResponderGrant={[Function]}
  onResponderMove={[Function]}
  onResponderRelease={[Function]}
  onResponderTerminate={[Function]}
  onResponderTerminationRequest={[Function]}
  onStartShouldSetResponder={[Function]}
  testID="wide-mission-card-container"
>
  <View
    style={
      Array [
        Object {
          "backgroundColor": "transparent",
          "elevation": 3,
          "shadowColor": "#262C2F",
          "shadowOffset": Object {
            "height": 4,
            "width": 0,
          },
          "shadowOpacity": 0.1,
        },
        Object {
          "borderBottomLeftRadius": 8,
          "borderBottomRightRadius": 8,
          "borderTopLeftRadius": 8,
          "borderTopRightRadius": 8,
          "flexDirection": "column",
          "justifyContent": "space-between",
          "paddingBottom": 20,
          "paddingLeft": 20,
          "paddingRight": 20,
          "paddingTop": 20,
        },
        Object {
          "alignItems": "center",
          "backgroundColor": "#FFFFFF",
          "borderBottomLeftRadius": 8,
          "borderBottomRightRadius": 8,
          "borderTopLeftRadius": 8,
          "borderTopRightRadius": 8,
          "flexDirection": "row",
          "justifyContent": "flex-start",
          "marginHorizontal": 16,
          "marginVertical": 8,
          "paddingBottom": 20,
          "paddingLeft": 20,
          "paddingRight": 20,
          "paddingTop": 20,
        },
      ]
    }
  >
    <View
      style={
        Array [
          Object {
            "height": 60,
            "width": 60,
          },
          Object {
            "backgroundColor": "#E2E3E3",
            "borderBottomLeftRadius": 30,
            "borderBottomRightRadius": 30,
            "borderTopLeftRadius": 30,
            "borderTopRightRadius": 30,
            "height": 60,
            "width": 60,
          },
        ]
      }
    >
      <View
        style={
          Array [
            Object {
              "overflow": "hidden",
            },
            Object {
              "alignItems": "center",
              "borderBottomLeftRadius": 60,
              "borderBottomRightRadius": 60,
              "borderTopLeftRadius": 60,
              "borderTopRightRadius": 60,
              "height": "100%",
              "justifyContent": "center",
              "width": "100%",
            },
          ]
        }
      >
        <FastImageView
          accessibilityLabel="brand-logo-image"
          accessible={true}
          onFastImageError={[Function]}
          onFastImageLoad={[Function]}
          onFastImageLoadEnd={[Function]}
          onFastImageLoadStart={[Function]}
          resizeMode="cover"
          source={
            Object {
              "priority": "high",
              "uri": "https://www.vodafone.es/c/particulares/es/acceso-area-privada/mvf/static/img/modules/backgrounds/New_VF_Icon_RGB_RED.png",
            }
          }
          style={
            Object {
              "bottom": 0,
              "left": 0,
              "position": "absolute",
              "right": 0,
              "top": 0,
            }
          }
          testID="brand-logo-image"
        />
      </View>
    </View>
    <View
      style={
        Object {
          "alignItems": "flex-start",
          "flexBasis": 0,
          "flexGrow": 1,
          "flexShrink": 1,
          "justifyContent": "space-between",
          "paddingLeft": 20,
        }
      }
    >
      <Text
        accessibilityLabel="wide-mission-card-mission-name"
        accessible={true}
        ellipsizeMode="tail"
        font="SFProDisplay-Bold"
        numberOfLines={1}
        style={
          Array [
            Object {
              "color": "#909BA0",
              "fontFamily": "SFProDisplay-Bold",
              "fontSize": 16,
              "lineHeight": 22,
            },
            Object {
              "color": "#262C2F",
              "fontSize": 18,
              "paddingVertical": 4,
              "width": "100%",
            },
          ]
        }
        testID="wide-mission-card-mission-name"
      >
        Walmart
      </Text>
      <View
        accessibilityLabel="pill-container"
        accessible={true}
        style={
          Array [
            Array [
              Object {
                "alignItems": "center",
                "backgroundColor": "#DDE8F5",
                "borderBottomLeftRadius": 20,
                "borderBottomRightRadius": 20,
                "borderTopLeftRadius": 20,
                "borderTopRightRadius": 20,
                "flexDirection": "row",
                "paddingLeft": 4,
                "paddingRight": 10,
              },
              Object {
                "height": 28,
              },
            ],
            Array [
              undefined,
            ],
            undefined,
          ]
        }
        testID="pill-container"
      >
        <View
          accessibilityLabel="pill-icon"
          accessible={true}
          style={
            Array [
              Object {
                "alignItems": "center",
                "backgroundColor": "#FFFFFF",
                "borderBottomLeftRadius": 50,
                "borderBottomRightRadius": 50,
                "borderTopLeftRadius": 50,
                "borderTopRightRadius": 50,
                "justifyContent": "center",
              },
              undefined,
            ]
          }
          testID="pill-icon"
        >
          <Text
            accessibilityLabel="icon-text"
            accessible={true}
            allowFontScaling={false}
            selectable={false}
            style={
              Array [
                Object {
                  "color": "#0066CC",
                  "fontSize": 20,
                },
                undefined,
                Object {
                  "fontFamily": "sywmax",
                  "fontStyle": "normal",
                  "fontWeight": "normal",
                },
                Object {},
              ]
            }
            testID="icon-text"
          >
            
          </Text>
        </View>
        <Text
          accessibilityLabel="pill-text"
          accessible={true}
          style={
            Array [
              Object {
                "color": "#909BA0",
                "fontFamily": "SFProDisplay-Medium",
                "fontSize": 16,
                "lineHeight": 22,
              },
              Array [
                Object {
                  "paddingLeft": 4,
                },
                Array [
                  Object {
                    "color": "#0066CC",
                    "fontFamily": "SFProDisplay-Bold",
                    "fontSize": 14,
                  },
                  Object {
                    "lineHeight": 20,
                  },
                  undefined,
                ],
              ],
            ]
          }
          testID="pill-text"
        >
          100 per $1
        </Text>
      </View>
    </View>
  </View>
</View>
`;

exports[`WideMissionCard should render with points only mission 1`] = `
<View
  accessibilityLabel="wide-mission-card-container"
  accessible={true}
  focusable={true}
  onClick={[Function]}
  onResponderGrant={[Function]}
  onResponderMove={[Function]}
  onResponderRelease={[Function]}
  onResponderTerminate={[Function]}
  onResponderTerminationRequest={[Function]}
  onStartShouldSetResponder={[Function]}
  testID="wide-mission-card-container"
>
  <View
    style={
      Array [
        Object {
          "backgroundColor": "transparent",
          "elevation": 3,
          "shadowColor": "#262C2F",
          "shadowOffset": Object {
            "height": 4,
            "width": 0,
          },
          "shadowOpacity": 0.1,
        },
        Object {
          "borderBottomLeftRadius": 8,
          "borderBottomRightRadius": 8,
          "borderTopLeftRadius": 8,
          "borderTopRightRadius": 8,
          "flexDirection": "column",
          "justifyContent": "space-between",
          "paddingBottom": 20,
          "paddingLeft": 20,
          "paddingRight": 20,
          "paddingTop": 20,
        },
        Object {
          "alignItems": "center",
          "backgroundColor": "#FFFFFF",
          "borderBottomLeftRadius": 8,
          "borderBottomRightRadius": 8,
          "borderTopLeftRadius": 8,
          "borderTopRightRadius": 8,
          "flexDirection": "row",
          "justifyContent": "flex-start",
          "marginHorizontal": 16,
          "marginVertical": 8,
          "paddingBottom": 20,
          "paddingLeft": 20,
          "paddingRight": 20,
          "paddingTop": 20,
        },
      ]
    }
  >
    <View
      style={
        Array [
          Object {
            "height": 60,
            "width": 60,
          },
          Object {
            "backgroundColor": "#E2E3E3",
            "borderBottomLeftRadius": 30,
            "borderBottomRightRadius": 30,
            "borderTopLeftRadius": 30,
            "borderTopRightRadius": 30,
            "height": 60,
            "width": 60,
          },
        ]
      }
    >
      <View
        style={
          Array [
            Object {
              "overflow": "hidden",
            },
            Object {
              "alignItems": "center",
              "borderBottomLeftRadius": 60,
              "borderBottomRightRadius": 60,
              "borderTopLeftRadius": 60,
              "borderTopRightRadius": 60,
              "height": "100%",
              "justifyContent": "center",
              "width": "100%",
            },
          ]
        }
      >
        <FastImageView
          accessibilityLabel="brand-logo-image"
          accessible={true}
          onFastImageError={[Function]}
          onFastImageLoad={[Function]}
          onFastImageLoadEnd={[Function]}
          onFastImageLoadStart={[Function]}
          resizeMode="cover"
          source={
            Object {
              "priority": "high",
              "uri": "https://i.ibb.co/nMJXNWq/Logos-SYW-MAX.png",
            }
          }
          style={
            Object {
              "bottom": 0,
              "left": 0,
              "position": "absolute",
              "right": 0,
              "top": 0,
            }
          }
          testID="brand-logo-image"
        />
      </View>
    </View>
    <View
      style={
        Object {
          "alignItems": "flex-start",
          "flexBasis": 0,
          "flexGrow": 1,
          "flexShrink": 1,
          "justifyContent": "space-between",
          "paddingLeft": 20,
        }
      }
    >
      <Text
        accessibilityLabel="wide-mission-card-mission-name"
        accessible={true}
        ellipsizeMode="tail"
        font="SFProDisplay-Bold"
        numberOfLines={1}
        style={
          Array [
            Object {
              "color": "#909BA0",
              "fontFamily": "SFProDisplay-Bold",
              "fontSize": 16,
              "lineHeight": 22,
            },
            Object {
              "color": "#262C2F",
              "fontSize": 18,
              "paddingVertical": 4,
              "width": "100%",
            },
          ]
        }
        testID="wide-mission-card-mission-name"
      >
        Walmart
      </Text>
      <View
        accessibilityLabel="pill-container"
        accessible={true}
        style={
          Array [
            Array [
              Object {
                "alignItems": "center",
                "backgroundColor": "#DDE8F5",
                "borderBottomLeftRadius": 20,
                "borderBottomRightRadius": 20,
                "borderTopLeftRadius": 20,
                "borderTopRightRadius": 20,
                "flexDirection": "row",
                "paddingLeft": 4,
                "paddingRight": 10,
              },
              Object {
                "height": 28,
              },
            ],
            Array [
              undefined,
            ],
            undefined,
          ]
        }
        testID="pill-container"
      >
        <View
          accessibilityLabel="pill-icon"
          accessible={true}
          style={
            Array [
              Object {
                "alignItems": "center",
                "backgroundColor": "#FFFFFF",
                "borderBottomLeftRadius": 50,
                "borderBottomRightRadius": 50,
                "borderTopLeftRadius": 50,
                "borderTopRightRadius": 50,
                "justifyContent": "center",
              },
              undefined,
            ]
          }
          testID="pill-icon"
        >
          <Text
            accessibilityLabel="icon-text"
            accessible={true}
            allowFontScaling={false}
            selectable={false}
            style={
              Array [
                Object {
                  "color": "#0066CC",
                  "fontSize": 20,
                },
                undefined,
                Object {
                  "fontFamily": "sywmax",
                  "fontStyle": "normal",
                  "fontWeight": "normal",
                },
                Object {},
              ]
            }
            testID="icon-text"
          >
            
          </Text>
        </View>
        <Text
          accessibilityLabel="pill-text"
          accessible={true}
          style={
            Array [
              Object {
                "color": "#909BA0",
                "fontFamily": "SFProDisplay-Medium",
                "fontSize": 16,
                "lineHeight": 22,
              },
              Array [
                Object {
                  "paddingLeft": 4,
                },
                Array [
                  Object {
                    "color": "#0066CC",
                    "fontFamily": "SFProDisplay-Bold",
                    "fontSize": 14,
                  },
                  Object {
                    "lineHeight": 20,
                  },
                  undefined,
                ],
              ],
            ]
          }
          testID="pill-text"
        >
          200
        </Text>
      </View>
    </View>
  </View>
</View>
`;
